daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N17_insufficient_domain_count/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae30158405a36bca7924cc88d0dcef64c903bb7c3ce910ffdd906f418bf7154e878dcea918d5b738b2149ec87b6b85acd47f0f6261412ac33122fdc1986ab594095247b5901f602f6
